<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    tools:context=".dataPetsActivity">


    <TextView
        android:id="@+id/tvinfoMascota"
        android:layout_width="wrap_content"
        android:layout_height="68dp"
        android:text="@string/tvinfoMascota"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="8dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/etNameMascotaUp"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:hint="@string/hint_nameMascota"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/etTipoUp"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:hint="@string/hint_tipo"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/etRazaUp"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:hint="@string/hint_raza"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/etEdadUp"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/hint_edad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPesoUp"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/hint_peso" />

</LinearLayout>